Browse Happy: Prevent spacing below footer background within a certain viewport width range.
Props shailu25.
Fixes #6935.
Sync with Sync with git WordPress/browsehappy@6ebe655.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13032 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/browsehappy.com/public_html/style.css
+++ b/browsehappy.com/public_html/style.css
@@ -643,6 +643,11 @@ html[dir="rtl"] #share nav li {
 		width: 230px;
 	}
 }
+@media (max-width: 705px) {
+	footer {
+		padding-bottom: 33px;
+	}
+}
 @media (max-width: 500px) {
 	header h1 {
 		font-size: 900%;
